# hashish

./: pyproject.toml
hashish/: __main__.py  hashish.py
tests/: simple_c_program  test_hashish.py
